labreport alignment fixed

--- a/src/app/modules/rndsampletest/labresult/labresult.component.scss
+++ b/src/app/modules/rndsampletest/labresult/labresult.component.scss
@@ -22,12 +22,6 @@
 //     margin-top: -12px;
 // }
 
-table,
-th,
-td {
-    border: 1px solid black;
-}
-
 .div-outer-table {
     overflow-x: scroll;
     display: inline-grid;
@@ -57,7 +51,7 @@ td {
 
 .matFld {
     color: Navy;
-    font-size: 12px;
+    font-size: 14px;
     height: 30px;
 }
 
